feat: implement disaster resilience map with shelter markers
- Add ShelterMap component with OpenStreetMap integration
- Display shelters with status-based PNG markers (available/limited/full)
- Implement full-screen map view with ShelterMapFullPage
- Add ShelterCard component showing capacity and vulnerable population stats
- Prevent duplicate marker rendering with _markersAdded flag
- Configure map with Naga City center and boundary limits
- Add tap navigation from shelter cards to map locations

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,11 @@
 	<string>We need access to your camera to capture your ID document</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need access to your photo library to upload your ID document</string>
+
+	<!-- Location permissions for map -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location to help you select pickup and delivery locations.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to location to provide location-based services.</string>
 </dict>
 </plist>
